# CppExperiments

./: README.md
BitPattern/: CMakeLists.txt  bitpattern.h  main.cpp
CartesianProduct/: CMakeLists.txt  cartesian_product.h  main.cpp
DynamicMethods/: dynamicMethods.cpp  dynamicMethods.h  main.cpp
Eratostene/: CMakeLists.txt  eratostene.cpp  eratostene.h  main.cpp
EventManager/: CMakeLists.txt  EventManager.cpp  EventManager.h  main.cpp
MultiType/: CMakeLists.txt  MultiType.cpp  MultiType.h  main.cpp
PoolAllocator/: CMakeLists.txt  PoolAllocator.h  main.cpp
Quaternion/: Quaternion.h  example.cpp  test.cpp
RangeIterator/: CMakeLists.txt  RangeIterator.cpp  RangeIterator.h  main.cpp
SpMatrix/: CMakeLists.txt  SpMatrix.h  main.cpp
Sudoku/: CMakeLists.txt  main.cpp  sudoku.cpp  sudoku.h
ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  main.cpp
TopologicalSorting/: CMakeLists.txt  TopologicalSorting.cpp  TopologicalSorting.h  main.cpp
TraceAllocator/: CMakeLists.txt  TraceAllocator.h  main.cpp
